--- a/index.html
+++ b/index.html
@@ -36,6 +36,6 @@
     </div>
    </div>
   <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-  <script src="/script.js"></script> 
+  <script src="text/script.js"></script> 
 </body>
 </html>
